# conformerview

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  pyproject.toml
conformers/CN/: conf1.xyz
src/conformer_analyzer/: __init__.py  alignment.py  elements.py  interactive.py  interface.py  models.py  parsing.py  rmsd.py  validation.py  visualization.py  web_interface.py
src/conformer_analyzer/static/: app.css  app.js
src/conformer_analyzer/templates/: index.html
tests/: test_alignment.py  test_interactive.py  test_interface.py  test_models.py  test_package.py  test_parsing.py  test_rmsd.py  test_validation.py  test_visualization.py  test_web_interface.py
